[tool.poetry]
name = "fastapi-sse"
version = "0.1.0"
description = ""
authors = ["samuel adekoya <samuel.adekoya@centricityinsights.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.9"
sse-starlette = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = {version = "^3.9.0", allow-prereleases = true}
mypy = {version = "^0.812", allow-prereleases = true}
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
